[tool.poetry]
name = "class-imbalance"
version = "0.1.0"
description = ""
authors = ["Sam Cooper <cooper437@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
dython = "^0.7.4"
xgboost = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
